--- a/test01/test01/MainWindow.xaml
+++ b/test01/test01/MainWindow.xaml
@@ -7,7 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Height="64" Margin="307,348,0,0" VerticalAlignment="Top" Width="175" Click="Button_Click"/>
+        <Button Content="Button" HorizontalAlignment="Left" Height="64" Margin="74,348,0,0" VerticalAlignment="Top" Width="175" Click="Button_Click"/>
+        <Button Content="Button" HorizontalAlignment="Left" Height="64" Margin="388,348,0,0" VerticalAlignment="Top" Width="160"/>
 
     </Grid>
 </Window>
